# gerrit-mcp

./: .env.example  .gitignore  Dockerfile  README.es.md  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.claude/: settings.local.json
src/gerrit_mcp/: __init__.py  __main__.py  config.py  gerrit_client.py  models.py  server.py
src/gerrit_mcp/tools/: __init__.py  accounts.py  changes.py  projects.py
tests/: test_gerrit_mcp.py
